Fix custom titlebar minimize button stuck hovered when clicked.

Normally when a button is clicked we assume the mouse is still hovering
over it, so we go back to the hovered state and wait for the mouse exit
event. However, when the minimize button minimizes the window Windows
gives us the mouse exit event before the mouse up event, so the button
will get stuck in the hovered state.

This patch fixes this by resetting the button state when it receives
a window control action, the same way the opaque frame currently solves
this problem.

Bug: 828591
Change-Id: I6e3f27b8f92bcbf3fb8171555702b8cf5326ba21
Reviewed-on: https://chromium-review.googlesource.com/1006373
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550733}
Former-commit-id: a6885b5355fb39feb35c3b8e3431963e0c3ba703