chrome/browser/ui/views/frame/glass_browser_frame_view.h
@@ -51,7 +51,7 @@ class GlassBrowserFrameView : public BrowserNonClientFrameView,
   void UpdateWindowIcon() override;
   void UpdateWindowTitle() override;
   void GetWindowMask(const gfx::Size& size, gfx::Path* window_mask) override {}
-  void ResetWindowControls() override {}
+  void ResetWindowControls() override;
   void SizeConstraintsChanged() override {}
 
   // views::ButtonListener:
